# v8x

./: .gitignore  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  update-docs.yml
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docusaurus/data/: version.yml
docusaurus/docs/: architecture.md  commands.mdx  contact.md  contributing.md  index.md  installation.md  notebooks.md  private-vantage-installation.md  storage-import-expose.md  troubleshooting.md  usage.md
docusaurus/docs/deployment-applications/: index.md
docusaurus/docs/deployment-applications/localhost/: index.md
docusaurus/src/css/: custom.css
scripts/: add_license_headers.py  generate_complete_docs.py  update_docs_version.py
tests/: conftest.py
tests/integration/: test_gql_client_integration.py
tests/unit/: test_auth.py  test_cloud_account_delete.py  test_cluster_create_deploy_app.py  test_cluster_create_ui_url.py  test_cluster_sdk_delegation.py  test_cluster_service_disable_heavy.py  test_deployment_app_discovery.py  test_get_kubeconfig.py  test_lxd_slurm_provider_command.py  test_slurm_juju_options.py  test_slurm_multipass_cloud_init.py  test_slurm_multipass_options.py  test_token_command.py
v8x/: __init__.py  auth.py  cache.py  client.py  config.py  constants.py  exceptions.py  gql_client.py  main.py  render.py  schemas.py  time_loop.py  utils.py  vantage_rest_api_client.py
v8x/apps/: __init__.py
v8x/apps/lxd/: __init__.py
v8x/apps/on_prem/: __init__.py
v8x/commands/: __init__.py  get_kubeconfig.py
v8x/commands/alias/: __init__.py  apps.py  cloud_accounts.py  clouds.py  clusters.py  deployments.py  federations.py  networks.py  profiles.py  support_tickets.py  teams.py
v8x/commands/app/: __init__.py  list.py
v8x/commands/cloud/: __init__.py  get.py  list.py
v8x/commands/cluster/: __init__.py  create.py  delete.py  extend.py  get.py  list.py  render.py  update.py  utils.py
v8x/commands/config/: __init__.py  clear.py
v8x/commands/federation/: __init__.py  create.py  delete.py  get.py  list.py  update.py
v8x/commands/job/: __init__.py  client.py
v8x/commands/license/: __init__.py  client.py
v8x/commands/network/: __init__.py  attach.py  create.py  delete.py  detach.py  get.py  list.py  update.py
v8x/commands/profile/: __init__.py  crud.py
v8x/commands/storage/: __init__.py  _helpers.py  create.py  delete.py  get.py  list.py  list_available.py  system.py
v8x/commands/support_ticket/: __init__.py  create.py  delete.py  get.py  list.py  update.py
v8x/commands/team/: __init__.py  add_member.py  add_resource.py  create.py  delete.py  get.py  list.py  list_members.py  remove_member.py  set_role.py  set_roles.py  update.py
v8x/commands/vdeployer_web/: __init__.py  deploy.py  destroy.py  status.py
v8x/deployment_apps/: __init__.py  common.py  constants.py  crud.py  schema.py
v8x/deployments/: crud.py  schema.py
v8x/libjuju/: __init__.py
v8x/profiles/: crud.py  schema.py
(+233 files in other folders)
